--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "log": "tic80 > log.txt",
     "load-cart": "tic80 cart.tic",
     "start": "tic80 cart.tic -code src/index.js",
-    "build": "sh scripts/build.sh",
-    "start-build": "tic80 cart.tic -code dist/index.min.js"
+    "build": "minify src/index.js > dist/index.min.js && shx cat src/tic-header.js dist/index.min.js > tmp && shx mv tmp dist/index.min.js",
+    "start-build": "tic80 cart.tic -code dist/index.min.js",
+    "minify": "minify src/index.js > dist/index.min.js"
   },
   "author": "Misteki",
   "license": "ISC",
-  "dependencies": {}
+  "dependencies": {
+    "minify": "^3.0.1",
+    "shx": "^0.2.2"
+  }
 }
