--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Test game thingy",
   "main": "src/index.js",
   "scripts": {
-    "start": "node ./tsc80.js"
+    "start": "tsc80 run"
   },
   "author": "Misteki",
   "license": "ISC",
